Added project files and fixed a bug in OS X with the launcher.